--- a/css/contact.css
+++ b/css/contact.css
@@ -80,3 +80,78 @@
 .contact-text span {
   color: #6e40c9;
 }
+
+@media (max-width: 1200px) {
+  #contato {
+    padding: 5rem 1rem;
+  }
+
+  .contact-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .contact-links {
+    margin-right: 0;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    background-color: transparent; 
+  }
+
+  .contact-link:hover {
+    background-color: transparent; 
+    color: #f3f3f3; 
+  }
+
+
+  .contact-link {
+    width: 100px;
+    height: auto;
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    background-color: transparent; 
+  }
+
+  .contact-text h1 {
+    font-size: 3rem;
+    text-align: center;
+    align-items: center;
+  }
+
+  .contact-text p {
+    font-size: 1.2rem;
+    text-align: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  #contato {
+    padding: 2rem 1rem;
+  }
+
+  .contact-content {
+    width: 100%;
+  }
+
+  .contact-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .contact-text p {
+    font-size: 1rem;
+  }
+
+  .contact-link {
+    font-size: 1.2rem;
+    background-color: transparent; 
+  }
+
+  .social-links {
+    gap: 10px;
+  }
+}
